--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 
-TOKEN=your_discord_bot_token_here
+TOKEN=MTM5MzI4MDQxMTI3ODI1MDE0NA.GtShGV.70HaFgWQh6iN9RmkoVgApTLMRAHN-wdxVU_H6Q
 TENOR_API_KEY=AIzaSyAyimkuYQYF_FXVALexPuGQctUWRURdCYQ
