--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 
-TOKEN=MTM5MzI4MDQxMTI3ODI1MDE0NA.GtShGV.70HaFgWQh6iN9RmkoVgApTLMRAHN-wdxVU_H6Q
+TOKEN=
 TENOR_API_KEY=AIzaSyAyimkuYQYF_FXVALexPuGQctUWRURdCYQ
